--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins{
     id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
-group 'org.team05'
+group 'CodeBash'
 version '0.1-SNAPSHOT'
 
 repositories {
